--- a/web/pages/publications.bib
+++ b/web/pages/publications.bib
@@ -15,7 +15,7 @@ keywords = {}
 @article{Consortium.Weng.2020, 
 year = {2020}, 
 title = {{Expanded encyclopaedias of DNA elements in the human and mouse genomes}}, 
-author = {Consortium, The ENCODE Project and Moore, Jill E and Purcaro, Michael J and Pratt, Henry E and Epstein, Charles B and Shoresh, Noam and Adrian, Jessika and Kawli, Trupti and Davis, Carrie A and Dobin, Alexander and Kaul, Rajinder and Halow, Jessica and Nostrand, Eric L Van and Freese, Peter and Gorkin, David U and Shen, Yin and He, Yupeng and Mackiewicz, Mark and Pauli-Behn, Florencia and Williams, Brian A and Mortazavi, Ali and Keller, Cheryl A and Zhang, Xiao-Ou and Elhajjajy, Shaimae I and Huey, Jack and Dickel, Diane E and Snetkova, Valentina and Wei, Xintao and Wang, Xiaofeng and Rivera-Mulia, Juan Carlos and Rozowsky, Joel and Zhang, Jing and Chhetri, Surya B and Zhang, Jialing and Victorsen, Alec and White, Kevin P and Visel, Axel and Yeo, Gene W and Burge, Christopher B and Lécuyer, Eric and Gilbert, David M and Dekker, Job and Rinn, John and Mendenhall, Eric M and Ecker, Joseph R and Kellis, Manolis and Klein, Robert J and Noble, William S and Kundaje, Anshul and Guigó, Roderic and Farnham, Peggy J and Cherry, J Michael and Myers, Richard M and Ren, Bing and Graveley, Brenton R and Gerstein, Mark B and Pennacchio, Len A and Snyder, Michael P and Bernstein, Bradley E and Wold, Barbara and Hardison, Ross C and Gingeras, Thomas R and Stamatoyannopoulos, John A and Weng, Zhiping}, 
+author = {The ENCODE Project Consortium},
 journal = {Nature}, 
 issn = {0028-0836}, 
 doi = {10.1038/s41586-020-2493-4}, 
