--- a/data/publications.bib
+++ b/data/publications.bib
@@ -44,7 +44,7 @@ local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Ainsworth-Bay
 @article{Zhu:Wang:2016, 
 year = {2016}, 
 title = {{Constructing 3D interaction maps from 1D epigenomes}}, 
-author = {Zhu, Yun and Chen, Zhao and Zhang, Kai and Wang, Mengchi and Medovoy, David and Whitaker, John W. and Ding, Bo and Li, Nan and Zheng, Lina and Wang, Wei}, 
+author = {Zhu*, Yun and Chen*, Zhao and Zhang, Kai and Wang, Mengchi and Medovoy, David and Whitaker, John W. and Ding, Bo and Li, Nan and Zheng, Lina and Wang, Wei}, 
 journal = {Nature Communications}, 
 issn = {2041-1723}, 
 doi = {10.1038/ncomms10812}, 
@@ -60,8 +60,8 @@ local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Zhu-Construct
 @article{Ngo:Wang:2019, 
 year = {2019}, 
 title = {{Epigenomic analysis reveals DNA motifs regulating histone modifications in human and mouse}}, 
-author = {Ngo, Vu and Chen, Zhao and Zhang, Kai and Whitaker, John W. and Wang, Mengchi and Wang, Wei}, 
-journal = {Proceedings of the National Academy of Sciences}, 
+author = {Ngo*, Vu and Chen*, Zhao and Zhang, Kai and Whitaker, John W. and Wang, Mengchi and Wang, Wei}, 
+journal = {PNAS}, 
 issn = {0027-8424}, 
 doi = {10.1073/pnas.1813565116}, 
 pmid = {30755522}, 
@@ -103,7 +103,7 @@ local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Fan-Integrati
 @article{Wang.Wang.2020, 
 year = {2020}, 
 title = {{Motto: Representing Motifs in Consensus Sequences with Minimum Information Loss}}, 
-author = {Wang, Mengchi and Wang, David and Zhang, Kai and Ngo, Vu and Fan, Shicai and Wang, Wei}, 
+author = {Wang*, Mengchi and Wang*, David and Zhang, Kai and Ngo, Vu and Fan, Shicai and Wang, Wei}, 
 journal = {Genetics}, 
 issn = {0016-6731}, 
 doi = {10.1534/genetics.120.303597}, 
@@ -145,7 +145,7 @@ local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Zhang-Taiji-%
 @article{Zhang.Ren.2021, 
 year = {2021}, 
 title = {{A single-cell atlas of chromatin accessibility in the human genome}}, 
-author = {Zhang, Kai and Hocker, James D. and Miller, Michael and Hou, Xiaomeng and Chiou, Joshua and Poirion, Olivier B. and Qiu, Yunjiang and Li, Yang E. and Gaulton, Kyle J. and Wang, Allen and Preissl, Sebastian and Ren, Bing}, 
+author = {Zhang*, Kai and Hocker*, James D. and Miller, Michael and Hou, Xiaomeng and Chiou, Joshua and Poirion, Olivier B. and Qiu, Yunjiang and Li, Yang E. and Gaulton, Kyle J. and Wang, Allen and Preissl, Sebastian and Ren, Bing}, 
 journal = {Cell}, 
 issn = {0092-8674}, 
 doi = {10.1016/j.cell.2021.10.024}, 
@@ -156,7 +156,7 @@ local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Zhang-A%20sin
 @article{10.1038/s41586-021-03604-1, 
 year = {2021}, 
 title = {{An atlas of gene regulatory elements in adult mouse cerebrum}}, 
-author = {Li, Yang Eric and Preissl, Sebastian and Hou, Xiaomeng and Zhang, Ziyang and Zhang, Kai and Qiu, Yunjiang and Poirion, Olivier B. and Li, Bin and Chiou, Joshua and Liu, Hanqing and Pinto-Duarte, Antonio and Kubo, Naoki and Yang, Xiaoyu and Fang, Rongxin and Wang, Xinxin and Han, Jee Yun and Lucero, Jacinta and Yan, Yiming and Miller, Michael and Kuan, Samantha and Gorkin, David and Gaulton, Kyle J. and Shen, Yin and Nunn, Michael and Mukamel, Eran A. and Behrens, M. Margarita and Ecker, Joseph R. and Ren, Bing}, 
+author = {Li*, Yang Eric and Preissl*, Sebastian and Hou, Xiaomeng and Zhang, Ziyang and Zhang, Kai and Qiu, Yunjiang and Poirion, Olivier B. and Li, Bin and Chiou, Joshua and Liu, Hanqing and Pinto-Duarte, Antonio and Kubo, Naoki and Yang, Xiaoyu and Fang, Rongxin and Wang, Xinxin and Han, Jee Yun and Lucero, Jacinta and Yan, Yiming and Miller, Michael and Kuan, Samantha and Gorkin, David and Gaulton, Kyle J. and Shen, Yin and Nunn, Michael and Mukamel, Eran A. and Behrens, M. Margarita and Ecker, Joseph R. and Ren, Bing}, 
 journal = {Nature}, 
 issn = {0028-0836}, 
 doi = {10.1038/s41586-021-03604-1}, 
@@ -181,7 +181,7 @@ local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Fang-Comprehe
 @article{10.1126/sciadv.abf1444, 
 year = {2021}, 
 title = {{Cardiac cell type–specific gene regulatory programs and disease risk association}}, 
-author = {Hocker, James D. and Poirion, Olivier B. and Zhu, Fugui and Buchanan, Justin and Zhang, Kai and Chiou, Joshua and Wang, Tsui-Min and Zhang, Qingquan and Hou, Xiaomeng and Li, Yang E. and Zhang, Yanxiao and Farah, Elie N. and Wang, Allen and McCulloch, Andrew D. and Gaulton, Kyle J. and Ren, Bing and Chi, Neil C. and Preissl, Sebastian}, 
+author = {Hocker, James D. and Poirion, Olivier B. and Zhu, Fugui and Buchanan, Justin and Zhang, Kai and Chiou, Joshua and Wang, Tsui-Min and Zhang, Qingquan and Hou, Xiaomeng and Li, Yang E. and Zhang, Yanxiao and Farah, Elie N. and Wang, Allen and McCulloch, Andrew D. and Gaulton, Kyle J. and Ren#, Bing and Chi#, Neil C. and Preissl#, Sebastian}, 
 journal = {Science Advances}, 
 issn = {2375-2548}, 
 doi = {10.1126/sciadv.abf1444}, 
@@ -207,7 +207,7 @@ keywords = {}
 @article{Yu:Goldrath:2017, 
 year = {2017}, 
 title = {{Epigenetic landscapes reveal transcription factors that regulate CD8+ T cell differentiation}}, 
-author = {Yu*, Bingfei and Zhang*, Kai and Milner, J Justin and Toma, Clara and Chen, Runqiang and Scott-Browne, James P and Pereira, Renata M and Crotty, Shane and Chang, John T and Pipkin, Matthew E and Wang, Wei and Goldrath, Ananda W}, 
+author = {Yu*, Bingfei and Zhang*, Kai and Milner, J Justin and Toma, Clara and Chen, Runqiang and Scott-Browne, James P and Pereira, Renata M and Crotty, Shane and Chang, John T and Pipkin, Matthew E and Wang#, Wei and Goldrath#, Ananda W}, 
 journal = {Nature Immunology}, 
 issn = {1529-2908}, 
 doi = {10.1038/ni.3706}, 
@@ -237,7 +237,7 @@ local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Milner-Runx3%
 @article{Wang.Consortium.2020i7s, 
 year = {2020}, 
 title = {{Single cell multiomic profiling of human lung reveals cell type-specific and age-dynamic control of SARS-CoV2 host genes}}, 
-author = {Wang, Allen and Chiou, Joshua and Poirion, Olivier B and Buchanan, Justin and Valdez, Michael J and Verheyden, Jamie M and Hou, Xiaomeng and Kudtarkar, Parul and Narendra, Sharvari and Newsome, Jacklyn M and Guo, Minzhe and Faddah, Dina A and Zhang, Kai and Young, Randee E and Barr, Justinn and Sajti, Eniko and Misra, Ravi and Huyck, Heidie and Rogers, Lisa and Poole, Cory and Whitsett, Jeffery A and Pryhuber, Gloria and Xu, Yan and Gaulton, Kyle J and Preissl, Sebastian and Sun, Xin and Consortium, NHLBI LungMap}, 
+author = {Wang*, Allen and Chiou*, Joshua and Poirion*, Olivier B and Buchanan*, Justin and Valdez*, Michael J and Verheyden, Jamie M and Hou, Xiaomeng and Kudtarkar, Parul and Narendra, Sharvari and Newsome, Jacklyn M and Guo, Minzhe and Faddah, Dina A and Zhang, Kai and Young, Randee E and Barr, Justinn and Sajti, Eniko and Misra, Ravi and Huyck, Heidie and Rogers, Lisa and Poole, Cory and Whitsett, Jeffery A and Pryhuber, Gloria and Xu, Yan and Gaulton, Kyle J and Preissl, Sebastian and Sun, Xin and Consortium, NHLBI LungMap}, 
 journal = {eLife}, 
 doi = {10.7554/elife.62522}, 
 pmid = {33164753}, 
@@ -249,7 +249,7 @@ local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Wang-Single%2
 @article{Ai:Chen:2011, 
 year = {2011}, 
 title = {{Signal-induced Brd4 release from chromatin is essential for its role transition from chromatin targeting to transcriptional regulation}}, 
-author = {Ai, Nanping and Hu, Xiangming and Ding, Feng and Yu, Bingfei and Wang, Huiping and Lu, Xiaodong and Zhang, Kai and Li, Yannan and Han, Aidong and Lin, Wen and Liu, Runzhong and Chen, Ruichuan}, 
+author = {Ai*, Nanping and Hu*, Xiangming and Ding*, Feng and Yu, Bingfei and Wang, Huiping and Lu, Xiaodong and Zhang, Kai and Li, Yannan and Han, Aidong and Lin, Wen and Liu, Runzhong and Chen, Ruichuan}, 
 journal = {Nucleic Acids Research}, 
 issn = {0305-1048}, 
 doi = {10.1093/nar/gkr698}, 
