--- a/data/publications.bib
+++ b/data/publications.bib
@@ -127,6 +127,7 @@ abstract = {{Chromatin looping plays a pivotal role in gene expression and other
 pages = {12249}, 
 number = {1}, 
 volume = {7}, 
+software = {https://github.com/kaizhang/DBPnet},
 keywords = {}
 }
 @article{Zhang.Wang.2019, 
@@ -140,6 +141,8 @@ abstract = {{Transcriptional regulation is pivotal to the specification of disti
 pages = {eaav3262}, 
 number = {3}, 
 volume = {5}, 
+software = {https://github.com/Taiji-pipeline/Taiji},
+website = {https://taiji-pipeline.github.io/},
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Zhang-Taiji-%20System-level%20identification%20of%20key%20transcription%20factors%20reveals%20transcriptional%20waves%20in%20mouse%20embryonic%20development-2019-Science%20Advances.pdf}
 }
 @article{Zhang.Ren.2021, 
@@ -151,6 +154,8 @@ issn = {0092-8674},
 doi = {10.1016/j.cell.2021.10.024}, 
 pmid = {34774128}, 
 abstract = {{Current catalogs of regulatory sequences in the human genome are still incomplete and lack cell type resolution. To profile the activity of gene regulatory elements in diverse cell types and tissues in the human body, we applied single-cell chromatin accessibility assays to 30 adult human tissue types from multiple donors. We integrated these datasets with previous single-cell chromatin accessibility data from 15 fetal tissue types to reveal the status of open chromatin for ∼1.2 million candidate cis-regulatory elements (cCREs) in 222 distinct cell types comprised of >1.3 million nuclei. We used these chromatin accessibility maps to delineate cell-type-specificity of fetal and adult human cCREs and to systematically interpret the noncoding variants associated with complex human traits and diseases. This rich resource provides a foundation for the analysis of gene regulatory programs in human cell types across tissues, life stages, and organ systems.}}, 
+video = {https://youtu.be/mZ832maMmIE},
+website = {http://catlas.org/humanenhancer/},
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Zhang-A%20single-cell%20atlas%20of%20chromatin%20accessibility%20in%20the%20human%20genome-2021-Cell.pdf}
 }
 @article{10.1038/s41586-021-03604-1, 
