--- a/data/publications.bib
+++ b/data/publications.bib
@@ -1,16 +1,14 @@
-@article{Chen:Zhou:2011, 
-year = {2011}, 
-title = {{Isolation and functional characterization of P-TEFb-associated factors that control general and HIV-1 transcriptional elongation}}, 
-author = {Chen, Ruichuan and Liu, Min and Zhang, Kai and Zhou, Qiang}, 
-journal = {Methods}, 
-issn = {1046-2023}, 
-doi = {10.1016/j.ymeth.2010.04.005}, 
-pmid = {20385240}, 
-abstract = {{ Originally identified as a factor crucial for RNA polymerase (Pol) II transcriptional elongation of cellular genes, the P-TEFb kinase was subsequently shown to also serve as a specific host co-factor required for HIV-1 transcription. Recruited by either the bromodomain protein Brd4 to cellular promoters for general transcription or the HIV-1 Tat protein to the viral LTR for activated HIV-1 transcription, P-TEFb stimulates the processivity of Pol II through phosphorylating the C-terminal domain of Pol II and a pair of negative elongation factors, leading to the synthesis of full-length transcripts. However, abundant evidence indicates that P-TEFb does not act alone in the cell and that all of its known biological functions are likely mediated through the interactions with various regulators. Although a number of P-TEFb-associated factors have already been identified, there are likely more yet to be discovered. Given that P-TEFb plays an essential role in HIV-1 transcription, a major challenge facing the field is to identify all the P-TEFb-associated factors and determine how they may modulate Tat-transactivation and HIV-1 replication. Described here is a set of experimental procedures that have not only enabled us to isolate and identify several P-TEFb-associated factors, but also provided the means to characterize their biochemical functions in HIV-1 transcriptional control. In light of the recent demonstrations that transcriptional elongation plays a much more important role in controlling metazoan gene expression than previously thought, the techniques presented here will also be useful for analyzing Pol II elongation of cellular genes.}}, 
-pages = {85--90}, 
-number = {1}, 
-volume = {53}, 
-keywords = {}
+@article{Wang.Consortium.2020i7s, 
+year = {2020}, 
+title = {{Single cell multiomic profiling of human lung reveals cell type-specific and age-dynamic control of SARS-CoV2 host genes}}, 
+author = {Wang*, Allen and Chiou*, Joshua and Poirion*, Olivier B and Buchanan*, Justin and Valdez*, Michael J and Verheyden, Jamie M and Hou, Xiaomeng and Kudtarkar, Parul and Narendra, Sharvari and Newsome, Jacklyn M and Guo, Minzhe and Faddah, Dina A and Zhang, Kai and Young, Randee E and Barr, Justinn and Sajti, Eniko and Misra, Ravi and Huyck, Heidie and Rogers, Lisa and Poole, Cory and Whitsett, Jeffery A and Pryhuber, Gloria and Xu, Yan and Gaulton, Kyle J and Preissl, Sebastian and Sun, Xin and Consortium, NHLBI LungMap}, 
+journal = {eLife}, 
+doi = {10.7554/elife.62522}, 
+pmid = {33164753}, 
+abstract = {{Respiratory failure associated with COVID-19 has placed focus on the lung. Here, we present single-nucleus accessible chromatin profiles of 90,980 nuclei and matched single-nucleus transcriptomes of 46,500 nuclei in non-diseased lung from donors of \textbackslashtextasciitilde30 weeks gestation, \textbackslashtextasciitilde3 years and \textbackslashtextasciitilde30 years. We mapped candidate cis-regulatory elements (cCREs) and linked them to putative target genes. We identified distal cCREs with age-increased activity linked to SARS-CoV-2 host entry gene TMPRSS2 in alveolar type 2 cells which had immune regulatory signatures and harbored variants associated with respiratory traits. At the 3p21.31 COVID-19 risk locus, a candidate variant overlapped a distal cCRE linked to SLC6A20, a gene expressed in alveolar cells and with known functional association with the SARS-CoV-2 receptor ACE2. Our findings provide insight into regulatory logic underlying genes implicated in COVID-19 in individual lung cell types across age. More broadly, these datasets will facilitate interpretation of risk loci for lung diseases.}}, 
+pages = {e62522}, 
+volume = {9}, 
+local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Wang-Single%20cell%20multiomic%20profiling%20of%20human%20lung%20reveals%20cell%20type-specific%20and%20age-dynamic%20control%20of%20SARS-CoV2%20host%20genes-2020-eLife.pdf}
 }
 @article{Consortium.Weng.2020, 
 year = {2020}, 
@@ -89,7 +87,7 @@ keywords = {}
 @article{Fan:Wang:2019, 
 year = {2019}, 
 title = {{Integrative analysis with expanded DNA methylation data reveals common key regulators and pathways in cancers}}, 
-author = {Fan, Shicai and Tang, Jianxiong and Li, Nan and Zhao, Ying and Ai, Rizi and Zhang, Kai and Wang, Mengchi and Du, Wei and Wang, Wei}, 
+author = {Fan#, Shicai and Tang, Jianxiong and Li, Nan and Zhao, Ying and Ai, Rizi and Zhang, Kai and Wang, Mengchi and Du, Wei and Wang#, Wei}, 
 journal = {npj Genomic Medicine}, 
 doi = {10.1038/s41525-019-0077-8}, 
 pmid = {30729033}, 
@@ -239,22 +237,24 @@ volume = {552},
 keywords = {}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Milner-Runx3%20programs%20CD8+%20T%20cell%20residency%20in%20non-lymphoid%20tissues%20and%20tumours-2017-Nature.pdf}
 }
-@article{Wang.Consortium.2020i7s, 
-year = {2020}, 
-title = {{Single cell multiomic profiling of human lung reveals cell type-specific and age-dynamic control of SARS-CoV2 host genes}}, 
-author = {Wang*, Allen and Chiou*, Joshua and Poirion*, Olivier B and Buchanan*, Justin and Valdez*, Michael J and Verheyden, Jamie M and Hou, Xiaomeng and Kudtarkar, Parul and Narendra, Sharvari and Newsome, Jacklyn M and Guo, Minzhe and Faddah, Dina A and Zhang, Kai and Young, Randee E and Barr, Justinn and Sajti, Eniko and Misra, Ravi and Huyck, Heidie and Rogers, Lisa and Poole, Cory and Whitsett, Jeffery A and Pryhuber, Gloria and Xu, Yan and Gaulton, Kyle J and Preissl, Sebastian and Sun, Xin and Consortium, NHLBI LungMap}, 
-journal = {eLife}, 
-doi = {10.7554/elife.62522}, 
-pmid = {33164753}, 
-abstract = {{Respiratory failure associated with COVID-19 has placed focus on the lung. Here, we present single-nucleus accessible chromatin profiles of 90,980 nuclei and matched single-nucleus transcriptomes of 46,500 nuclei in non-diseased lung from donors of \textbackslashtextasciitilde30 weeks gestation, \textbackslashtextasciitilde3 years and \textbackslashtextasciitilde30 years. We mapped candidate cis-regulatory elements (cCREs) and linked them to putative target genes. We identified distal cCREs with age-increased activity linked to SARS-CoV-2 host entry gene TMPRSS2 in alveolar type 2 cells which had immune regulatory signatures and harbored variants associated with respiratory traits. At the 3p21.31 COVID-19 risk locus, a candidate variant overlapped a distal cCRE linked to SLC6A20, a gene expressed in alveolar cells and with known functional association with the SARS-CoV-2 receptor ACE2. Our findings provide insight into regulatory logic underlying genes implicated in COVID-19 in individual lung cell types across age. More broadly, these datasets will facilitate interpretation of risk loci for lung diseases.}}, 
-pages = {e62522}, 
-volume = {9}, 
-local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Wang-Single%20cell%20multiomic%20profiling%20of%20human%20lung%20reveals%20cell%20type-specific%20and%20age-dynamic%20control%20of%20SARS-CoV2%20host%20genes-2020-eLife.pdf}
+@article{Chen:Zhou:2011, 
+year = {2011}, 
+title = {{Isolation and functional characterization of P-TEFb-associated factors that control general and HIV-1 transcriptional elongation}}, 
+author = {Chen, Ruichuan and Liu, Min and Zhang, Kai and Zhou, Qiang}, 
+journal = {Methods}, 
+issn = {1046-2023}, 
+doi = {10.1016/j.ymeth.2010.04.005}, 
+pmid = {20385240}, 
+abstract = {{ Originally identified as a factor crucial for RNA polymerase (Pol) II transcriptional elongation of cellular genes, the P-TEFb kinase was subsequently shown to also serve as a specific host co-factor required for HIV-1 transcription. Recruited by either the bromodomain protein Brd4 to cellular promoters for general transcription or the HIV-1 Tat protein to the viral LTR for activated HIV-1 transcription, P-TEFb stimulates the processivity of Pol II through phosphorylating the C-terminal domain of Pol II and a pair of negative elongation factors, leading to the synthesis of full-length transcripts. However, abundant evidence indicates that P-TEFb does not act alone in the cell and that all of its known biological functions are likely mediated through the interactions with various regulators. Although a number of P-TEFb-associated factors have already been identified, there are likely more yet to be discovered. Given that P-TEFb plays an essential role in HIV-1 transcription, a major challenge facing the field is to identify all the P-TEFb-associated factors and determine how they may modulate Tat-transactivation and HIV-1 replication. Described here is a set of experimental procedures that have not only enabled us to isolate and identify several P-TEFb-associated factors, but also provided the means to characterize their biochemical functions in HIV-1 transcriptional control. In light of the recent demonstrations that transcriptional elongation plays a much more important role in controlling metazoan gene expression than previously thought, the techniques presented here will also be useful for analyzing Pol II elongation of cellular genes.}}, 
+pages = {85--90}, 
+number = {1}, 
+volume = {53}, 
+keywords = {}
 }
 @article{Ai:Chen:2011, 
 year = {2011}, 
 title = {{Signal-induced Brd4 release from chromatin is essential for its role transition from chromatin targeting to transcriptional regulation}}, 
-author = {Ai*, Nanping and Hu*, Xiangming and Ding*, Feng and Yu, Bingfei and Wang, Huiping and Lu, Xiaodong and Zhang, Kai and Li, Yannan and Han, Aidong and Lin, Wen and Liu, Runzhong and Chen, Ruichuan}, 
+author = {Ai*, Nanping and Hu*, Xiangming and Ding*, Feng and Yu, Bingfei and Wang, Huiping and Lu, Xiaodong and Zhang, Kai and Li, Yannan and Han, Aidong and Lin, Wen and Liu#, Runzhong and Chen#, Ruichuan}, 
 journal = {Nucleic Acids Research}, 
 issn = {0305-1048}, 
 doi = {10.1093/nar/gkr698}, 
