--- a/data/publications.bib
+++ b/data/publications.bib
@@ -1,4 +1,4 @@
-@article{Wang.Consortium.2020i7s, 
+@article{Wang.2020.eLife, 
 year = {2020}, 
 title = {{Single cell multiomic profiling of human lung reveals cell type-specific and age-dynamic control of SARS-CoV2 host genes}}, 
 author = {Wang*, Allen and Chiou*, Joshua and Poirion*, Olivier B and Buchanan*, Justin and Valdez*, Michael J and Verheyden, Jamie M and Hou, Xiaomeng and Kudtarkar, Parul and Narendra, Sharvari and Newsome, Jacklyn M and Guo, Minzhe and Faddah, Dina A and Zhang, Kai and Young, Randee E and Barr, Justinn and Sajti, Eniko and Misra, Ravi and Huyck, Heidie and Rogers, Lisa and Poole, Cory and Whitsett, Jeffery A and Pryhuber, Gloria and Xu, Yan and Gaulton, Kyle J and Preissl, Sebastian and Sun, Xin and Consortium, NHLBI LungMap}, 
@@ -10,7 +10,7 @@ pages = {e62522},
 volume = {9}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Wang-Single%20cell%20multiomic%20profiling%20of%20human%20lung%20reveals%20cell%20type-specific%20and%20age-dynamic%20control%20of%20SARS-CoV2%20host%20genes-2020-eLife.pdf}
 }
-@article{Consortium.Weng.2020, 
+@article{ENCODE.2020.Nature, 
 year = {2020}, 
 title = {{Expanded encyclopaedias of DNA elements in the human and mouse genomes}}, 
 author = {The ENCODE Project Consortium},
@@ -24,7 +24,7 @@ number = {7818},
 volume = {583}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Consortium-Expanded%20encyclopaedias%20of%20DNA%20elements%20in%20the%20human%20and%20mouse%20genomes-2020-Nature.pdf}
 }
-@article{Ainsworth:Wang:2018, 
+@article{Ainsworth.2018.G3, 
 year = {2018}, 
 title = {{Bayesian Networks Predict Neuronal Transdifferentiation}}, 
 author = {Ainsworth, Richard I. and Ai, Rizi and Ding, Bo and Li, Nan and Zhang, Kai and Wang, Wei}, 
@@ -39,7 +39,7 @@ volume = {8},
 keywords = {}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Ainsworth-Bayesian%20Networks%20Predict%20Neuronal%20Transdifferentiation-2018-G3-%20Genes,%20Genomes,%20Genetics.pdf}
 }
-@article{Zhu:Wang:2016, 
+@article{Zhu.2016.NC, 
 year = {2016}, 
 title = {{Constructing 3D interaction maps from 1D epigenomes}}, 
 author = {Zhu*, Yun and Chen*, Zhao and Zhang, Kai and Wang, Mengchi and Medovoy, David and Whitaker, John W. and Ding, Bo and Li, Nan and Zheng, Lina and Wang, Wei}, 
@@ -55,7 +55,7 @@ volume = {7},
 keywords = {}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Zhu-Constructing%203D%20interaction%20maps%20from%201D%20epigenomes-2016-Nature%20Communications.pdf}
 }
-@article{Ngo:Wang:2019, 
+@article{Ngo.2019.PNAS, 
 year = {2019}, 
 title = {{Epigenomic analysis reveals DNA motifs regulating histone modifications in human and mouse}}, 
 author = {Ngo*, Vu and Chen*, Zhao and Zhang, Kai and Whitaker, John W. and Wang, Mengchi and Wang, Wei}, 
@@ -70,7 +70,7 @@ volume = {116},
 keywords = {}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Ngo-Epigenomic%20analysis%20reveals%20DNA%20motifs%20regulating%20histone%20modifications%20in%20human%20and%20mouse-2019-Proceedings%20of%20the%20National%20Academy%20of%20Sciences.pdf}
 }
-@article{Wang:Wang:2019, 
+@article{Wang.2019.NAR, 
 year = {2019}, 
 title = {{Identification of DNA motifs that regulate DNA methylation}}, 
 author = {Wang, Mengchi and Zhang, Kai and Ngo, Vu and Liu, Chengyu and Fan, Shicai and Whitaker, John W and Chen, Yue and Ai, Rizi and Chen, Zhao and Wang, Jun and Zheng, Lina and Wang, Wei}, 
@@ -84,7 +84,7 @@ number = {13},
 volume = {47}, 
 keywords = {}
 }
-@article{Fan:Wang:2019, 
+@article{Fan.2019.NPJ, 
 year = {2019}, 
 title = {{Integrative analysis with expanded DNA methylation data reveals common key regulators and pathways in cancers}}, 
 author = {Fan#, Shicai and Tang, Jianxiong and Li, Nan and Zhao, Ying and Ai, Rizi and Zhang, Kai and Wang, Mengchi and Du, Wei and Wang#, Wei}, 
@@ -98,7 +98,7 @@ volume = {4},
 keywords = {}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Fan-Integrative%20analysis%20with%20expanded%20DNA%20methylation%20data%20reveals%20common%20key%20regulators%20and%20pathways%20in%20cancers-2019-npj%20Genomic%20Medicine.pdf}
 }
-@article{Wang.Wang.2020, 
+@article{Wang.2020.Genetics, 
 year = {2020}, 
 title = {{Motto: Representing Motifs in Consensus Sequences with Minimum Information Loss}}, 
 author = {Wang*, Mengchi and Wang*, David and Zhang, Kai and Ngo, Vu and Fan, Shicai and Wang, Wei}, 
@@ -112,7 +112,7 @@ number = {2},
 volume = {216}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Wang-Motto-%20Representing%20Motifs%20in%20Consensus%20Sequences%20with%20Minimum%20Information%20Loss-2020-Genetics.pdf}
 }
-@article{Zhang:Wang:2016, 
+@article{Zhang.2016.NC, 
 year = {2016}, 
 title = {{Systematic identification of protein combinations mediating chromatin looping}}, 
 author = {Zhang, Kai and Li, Nan and Ainsworth, Richard I. and Wang, Wei}, 
@@ -128,7 +128,7 @@ volume = {7},
 software = {https://github.com/kaizhang/DBPnet},
 keywords = {}
 }
-@article{Zhang.Wang.2019, 
+@article{Zhang.2019.Sci_Adv, 
 year = {2019}, 
 title = {{Taiji: System-level identification of key transcription factors reveals transcriptional waves in mouse embryonic development}}, 
 author = {Zhang, Kai and Wang, Mengchi and Zhao, Ying and Wang, Wei}, 
@@ -143,7 +143,7 @@ software = {https://github.com/Taiji-pipeline/Taiji},
 website = {https://taiji-pipeline.github.io/},
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Zhang-Taiji-%20System-level%20identification%20of%20key%20transcription%20factors%20reveals%20transcriptional%20waves%20in%20mouse%20embryonic%20development-2019-Science%20Advances.pdf}
 }
-@article{Zhang.Ren.2021, 
+@article{Zhang.2021.Cell, 
 year = {2021}, 
 title = {{A single-cell atlas of chromatin accessibility in the human genome}}, 
 author = {Zhang*, Kai and Hocker*, James D. and Miller, Michael and Hou, Xiaomeng and Chiou, Joshua and Poirion, Olivier B. and Qiu, Yunjiang and Li, Yang E. and Gaulton, Kyle J. and Wang, Allen and Preissl, Sebastian and Ren, Bing}, 
@@ -156,7 +156,7 @@ video = {https://youtu.be/mZ832maMmIE},
 website = {http://catlas.org/humanenhancer/},
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Zhang-A%20single-cell%20atlas%20of%20chromatin%20accessibility%20in%20the%20human%20genome-2021-Cell.pdf}
 }
-@article{10.1038/s41586-021-03604-1, 
+@article{Li.2021.Nature, 
 year = {2021}, 
 title = {{An atlas of gene regulatory elements in adult mouse cerebrum}}, 
 author = {Li*, Yang Eric and Preissl*, Sebastian and Hou, Xiaomeng and Zhang, Ziyang and Zhang, Kai and Qiu, Yunjiang and Poirion, Olivier B. and Li, Bin and Chiou, Joshua and Liu, Hanqing and Pinto-Duarte, Antonio and Kubo, Naoki and Yang, Xiaoyu and Fang, Rongxin and Wang, Xinxin and Han, Jee Yun and Lucero, Jacinta and Yan, Yiming and Miller, Michael and Kuan, Samantha and Gorkin, David and Gaulton, Kyle J. and Shen, Yin and Nunn, Michael and Mukamel, Eran A. and Behrens, M. Margarita and Ecker, Joseph R. and Ren, Bing}, 
@@ -169,7 +169,7 @@ number = {7879},
 volume = {598}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Li-An%20atlas%20of%20gene%20regulatory%20elements%20in%20adult%20mouse%20cerebrum-2021-Nature.pdf}
 }
-@article{Fang.Ren.2021, 
+@article{Fang.2021.NC, 
 year = {2021}, 
 title = {{Comprehensive analysis of single cell ATAC-seq data with SnapATAC}}, 
 author = {Fang, Rongxin and Preissl, Sebastian and Li, Yang and Hou, Xiaomeng and Lucero, Jacinta and Wang, Xinxin and Motamedi, Amir and Shiau, Andrew K. and Zhou, Xinzhu and Xie, Fangming and Mukamel, Eran A. and Zhang, Kai and Zhang, Yanxiao and Behrens, M. Margarita and Ecker, Joseph R. and Ren, Bing}, 
@@ -181,7 +181,7 @@ number = {1},
 volume = {12}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Fang-Comprehensive%20analysis%20of%20single%20cell%20ATAC-seq%20data%20with%20SnapATAC-2021-Nature%20Communications.pdf}
 }
-@article{10.1126/sciadv.abf1444, 
+@article{Hocker.2021.Sci_Adv,
 year = {2021}, 
 title = {{Cardiac cell type–specific gene regulatory programs and disease risk association}}, 
 author = {Hocker, James D. and Poirion, Olivier B. and Zhu, Fugui and Buchanan, Justin and Zhang, Kai and Chiou, Joshua and Wang, Tsui-Min and Zhang, Qingquan and Hou, Xiaomeng and Li, Yang E. and Zhang, Yanxiao and Farah, Elie N. and Wang, Allen and McCulloch, Andrew D. and Gaulton, Kyle J. and Ren#, Bing and Chi#, Neil C. and Preissl#, Sebastian}, 
@@ -194,7 +194,7 @@ number = {20},
 volume = {7}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Hocker-Cardiac%20cell%20type–specific%20gene%20regulatory%20programs%20and%20disease%20risk%20association-2021-Science%20Advances.pdf}
 }
-@article{Wei:Ohno-Machado:2018, 
+@article{Wei.2018.Database, 
 year = {2018}, 
 title = {{Finding relevant biomedical datasets: the UC San Diego solution for the bioCADDIE Retrieval Challenge}}, 
 author = {Wei, Wei and Ji, Zhanglong and He, Yupeng and Zhang, Kai and Ha, Yuanchi and Li, Qi and Ohno-Machado, Lucila}, 
@@ -207,7 +207,7 @@ pages = {bay017--},
 volume = {2018}, 
 keywords = {}
 }
-@article{Yu:Goldrath:2017, 
+@article{Yu.2017.NI, 
 year = {2017}, 
 title = {{Epigenetic landscapes reveal transcription factors that regulate CD8+ T cell differentiation}}, 
 author = {Yu*, Bingfei and Zhang*, Kai and Milner, J Justin and Toma, Clara and Chen, Runqiang and Scott-Browne, James P and Pereira, Renata M and Crotty, Shane and Chang, John T and Pipkin, Matthew E and Wang#, Wei and Goldrath#, Ananda W}, 
@@ -222,7 +222,7 @@ volume = {18},
 keywords = {}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Yu-Epigenetic%20landscapes%20reveal%20transcription%20factors%20that%20regulate%20CD8+%20T%20cell%20differentiation-2017-Nature%20Immunology.pdf}
 }
-@article{Milner:Goldrath:2017, 
+@article{Milner.2017.Nature, 
 year = {2017}, 
 title = {{Runx3 programs CD8+ T cell residency in non-lymphoid tissues and tumours}}, 
 author = {Milner, J. Justin and Toma, Clara and Yu, Bingfei and Zhang, Kai and Omilusik, Kyla and Phan, Anthony T. and Wang, Dapeng and Getzler, Adam J. and Nguyen, Toan and Crotty, Shane and Wang, Wei and Pipkin, Matthew E. and Goldrath, Ananda W.}, 
@@ -237,7 +237,7 @@ volume = {552},
 keywords = {}, 
 local-url = {file://localhost/Users/kai/Documents/Papers%20Library/Milner-Runx3%20programs%20CD8+%20T%20cell%20residency%20in%20non-lymphoid%20tissues%20and%20tumours-2017-Nature.pdf}
 }
-@article{Chen:Zhou:2011, 
+@article{Chen.2011.Methods, 
 year = {2011}, 
 title = {{Isolation and functional characterization of P-TEFb-associated factors that control general and HIV-1 transcriptional elongation}}, 
 author = {Chen, Ruichuan and Liu, Min and Zhang, Kai and Zhou, Qiang}, 
@@ -251,7 +251,7 @@ number = {1},
 volume = {53}, 
 keywords = {}
 }
-@article{Ai:Chen:2011, 
+@article{Ai.2011.NAR, 
 year = {2011}, 
 title = {{Signal-induced Brd4 release from chromatin is essential for its role transition from chromatin targeting to transcriptional regulation}}, 
 author = {Ai*, Nanping and Hu*, Xiangming and Ding*, Feng and Yu, Bingfei and Wang, Huiping and Lu, Xiaodong and Zhang, Kai and Li, Yannan and Han, Aidong and Lin, Wen and Liu#, Runzhong and Chen#, Ruichuan}, 
